Script 02_strava_data_to_csv.py complété et fonctionnel

--- a/notebooks/04_csv_formatting.ipynb
+++ b/notebooks/04_csv_formatting.ipynb
@@ -2,41 +2,36 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "distance\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "\"\"\"\n",
-    "FIT --> correct CSV\n",
-    "\n",
-    "Fonction pour formater les CSV après conversion .fit --> CSV\n",
-    "\n",
-    "Format de sortie :\n",
-    "Nom, Date, Latitutde, Longitude\n",
-    "\"\"\"\n",
-    "\n",
     "import pandas as pd\n",
     "\n",
+    "FIT_file = \"/Users/mgerenius/VScode_Workspace/Projet_01-Carte_dExploration/data/00_DATA_TEST/FIT--CSV-data.csv\"\n",
     "\n",
     "\n",
-    "def csv_formating(csv_file):\n",
+    "def function(file):\n",
     "\n",
-    "    df =  pd.read_csv(csv_file, nrows=0)\n",
-    "    first_colomn_name = df.columns[0]\n",
-    "    print(first_colomn_name)\n",
+    "    df = pd.read_csv(file)\n",
+    "\n",
+    "    # Impression de la première ligne hors titres\n",
+    "    line = df.iloc[0]\n",
+    "\n",
+    "    # élément de la première ligne, deuxième colonne\n",
+    "    element = df.iloc[0,1]\n",
+    "  \n",
+    "    # nombre de lignes hors titre\n",
+    "    number = len(df)\n",
+    "    \n",
+    "    print(line)\n",
+    "    print(\"\\n\")\n",
+    "    print(element)\n",
+    "    print(\"\\n\")\n",
+    "    print(number)\n",
     "\n",
     "\n",
-    "csv_file = \"/Users/mgerenius/VScode_Workspace/Projet_01 - Carte_d'exploration/data/CSV_files/10657680236.csv\"\n",
-    "\n",
-    "csv_formating(csv_file)"
+    "function(FIT_file)"
    ]
   },
   {
@@ -45,14 +40,307 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\"\"\"\n",
-    "GPX --> correct CSV\n",
+    "import pandas as pd\n",
+    "\n",
+    "FIT_file = \"/Users/mgerenius/VScode_Workspace/Projet_01-Carte_dExploration/data/00_DATA_TEST/FIT--CSV-data.csv\"\n",
+    "\n",
+    "\n",
+    "def function2(file):\n",
+    "\n",
+    "    df = pd.read_csv(file)\n",
+    "\n",
+    "    # Impression de la première ligne hors titres\n",
+    "    line_1 = df.iloc[0]\n",
+    "\n",
+    "    # élément de la première ligne, deuxième colonne\n",
+    "    element = df.iloc[0,1]\n",
+    "  \n",
+    "    # nombre de lignes hors titre\n",
+    "    total_number = len(df)\n",
+    "\n",
+    "    # dernière ligne de df\n",
+    "    last_element = df.iloc[total_number - 1]\n",
+    "    \n",
+    "    print(line_1)\n",
+    "    print(\"\\n\")\n",
+    "    print(element)\n",
+    "    print(\"\\n\")\n",
+    "    print(total_number)\n",
+    "    print(\"\\n\")\n",
+    "    print(last_element)\n",
+    "\n",
+    "function2(FIT_file)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "FIT_file = \"/Users/mgerenius/VScode_Workspace/Projet_01-Carte_dExploration/data/00_DATA_TEST/FIT--CSV-data.csv\"\n",
+    "\n",
+    "\n",
+    "\n",
+    "df = pd.read_csv(FIT_file)\n",
+    "\n",
+    "\n",
+    "\n",
+    "# Impression de la première ligne hors titres\n",
+    "line_1 = df.iloc[0]\n",
+    "\n",
+    "# élément de la première ligne, deuxième colonne\n",
+    "element = df.iloc[0,1]\n",
+    "\n",
+    "# nombre de lignes hors titre\n",
+    "total_number = len(df)\n",
+    "\n",
+    "# dernière ligne de df\n",
+    "last_element = df.iloc[total_number - 1]\n",
+    "\n",
+    "print(line_1)\n",
+    "print(\"\\n\")\n",
+    "print(element)\n",
+    "print(\"\\n\")\n",
+    "print(total_number)\n",
+    "print(\"\\n\")\n",
+    "print(last_element)\n",
+    "df\n",
+    "\n",
+    "for row in df.itertuples():\n",
+    "    print(row.distance, row.timestamp)\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "new_df = df.filter([\"distance\"])\n",
+    "new_df\n",
+    "\n",
+    "for row in new_df.itertuples():\n",
+    "    print(row.distance)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "***"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
+    "csv FIT --> correct CSV\n",
+    "\n",
+    "Fonction pour formater les CSV après conversion .fit --> CSV\n",
+    "\n",
+    "Format de sortie :\n",
+    "Nom, Date, Latitutde, Longitude\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "le dataframe a bien été créé :                       nom        date     latitude   longitude\n",
+      "0      FIT--CSV-data.csv1  2023-09-29  583251508.0  26041057.0\n",
+      "1      FIT--CSV-data.csv2  2023-09-29  583251866.0  26042704.0\n",
+      "2      FIT--CSV-data.csv3  2023-09-29  583253280.0  26042934.0\n",
+      "3      FIT--CSV-data.csv4  2023-09-29  583254391.0  26043316.0\n",
+      "4      FIT--CSV-data.csv5  2023-09-29  583255657.0  26044182.0\n",
+      "..                    ...         ...          ...         ...\n",
+      "378  FIT--CSV-data.csv379  2023-09-29  583245220.0  25992858.0\n",
+      "379  FIT--CSV-data.csv380  2023-09-29  583245448.0  25995240.0\n",
+      "380  FIT--CSV-data.csv381  2023-09-29  583245695.0  25997002.0\n",
+      "381  FIT--CSV-data.csv382  2023-09-29  583245930.0  25998591.0\n",
+      "382  FIT--CSV-data.csv383  2023-09-29  583246875.0  26000796.0\n",
+      "\n",
+      "[383 rows x 4 columns]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "import os\n",
+    "\n",
+    "FIT_file = \"/Users/mgerenius/VScode_Workspace/Projet_01-Carte_dExploration/data/00_DATA_TEST/FIT--CSV-data.csv\"\n",
+    "output_folder = \"/Users/mgerenius/VScode_Workspace/Projet_01-Carte_dExploration/data/00_DATA_TEST\"\n",
+    "\n",
+    "\n",
+    "def function_3(file, output_folder):\n",
+    "    df = pd.read_csv(file)\n",
+    "    file_name = os.path.basename(file)\n",
+    "\n",
+    "    data_list = []\n",
+    "    count = 0\n",
+    "    for row in df.itertuples():\n",
+    "        if pd.notnull(row.position_lat) and pd.notnull(row.position_long):\n",
+    "            count += 1\n",
+    "            date, y = row.timestamp.split(' ',1)\n",
+    "            data_list.append({\n",
+    "                \"nom\": file_name + str(count),\n",
+    "                \"date\": date,\n",
+    "                \"latitude\": row.position_lat,\n",
+    "                \"longitude\": row.position_long\n",
+    "            })\n",
+    "    new_df = pd.DataFrame(data_list)\n",
+    "\n",
+    "    output_file = os.path.join(output_folder, file_name)\n",
+    "\n",
+    "    new_df.to_csv(output_folder + \"/\" + \"format\" + file_name, index=False, encoding=\"utf-8\")\n",
+    "\n",
+    "    print(f\"le dataframe a bien été créé : {new_df}\")\n",
+    "\n",
+    "\n",
+    "function_3(FIT_file, output_folder)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "***"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
+    "csv GPX --> correct CSV\n",
     "\n",
     "Fonction pour formater les CSV après conversion .gpx --> CSV\n",
     "\n",
     "Format de sortie :\n",
-    "Nom, Date, Latitutde, Longitude\n",
-    "\"\"\""
+    "Nom, Date, Latitutde, Longitude\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "le dataframe a bien été créé :                       nom        date   latitude  longitude\n",
+      "0      GPX--CSV-data.csv1  2023-05-17  45.556241 -73.624480\n",
+      "1      GPX--CSV-data.csv2  2023-05-17  45.556382 -73.624428\n",
+      "2      GPX--CSV-data.csv3  2023-05-17  45.556443 -73.624455\n",
+      "3      GPX--CSV-data.csv4  2023-05-17  45.556504 -73.624482\n",
+      "4      GPX--CSV-data.csv5  2023-05-17  45.556564 -73.624510\n",
+      "..                    ...         ...        ...        ...\n",
+      "564  GPX--CSV-data.csv565  2023-05-17  45.573035 -73.643900\n",
+      "565  GPX--CSV-data.csv566  2023-05-17  45.573013 -73.643894\n",
+      "566  GPX--CSV-data.csv567  2023-05-17  45.572975 -73.643875\n",
+      "567  GPX--CSV-data.csv568  2023-05-17  45.572963 -73.643864\n",
+      "568  GPX--CSV-data.csv569  2023-05-17  45.572963 -73.643864\n",
+      "\n",
+      "[569 rows x 4 columns]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "import os\n",
+    "\n",
+    "GPX_file = \"/Users/mgerenius/VScode_Workspace/Projet_01-Carte_dExploration/data/00_DATA_TEST/GPX--CSV-data.csv\"\n",
+    "output_folder = \"/Users/mgerenius/VScode_Workspace/Projet_01-Carte_dExploration/data/00_DATA_TEST\"\n",
+    "\n",
+    "\n",
+    "def function_4(file, output_folder):\n",
+    "    df = pd.read_csv(file)\n",
+    "    file_name = os.path.basename(file)\n",
+    "\n",
+    "    data_list = []\n",
+    "    count = 0\n",
+    "    for row in df.itertuples():\n",
+    "        count += 1\n",
+    "        date, y = row.time.split(' ',1)\n",
+    "        data_list.append({\n",
+    "            \"nom\": file_name + str(count),\n",
+    "            \"date\": date,\n",
+    "            \"latitude\": row.latitude,\n",
+    "            \"longitude\": row.longitude\n",
+    "        })\n",
+    "    new_df = pd.DataFrame(data_list)\n",
+    "\n",
+    "    output_file = os.path.join(output_folder, file_name)\n",
+    "\n",
+    "    new_df.to_csv(output_folder + \"/\" + \"format\" + file_name, index=False, encoding=\"utf-8\")\n",
+    "\n",
+    "    print(f\"le dataframe a bien été créé : {new_df}\")\n",
+    "\n",
+    "\n",
+    "function_4(GPX_file, output_folder)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import os\n",
+    "\n",
+    "GPX_file = \"/Users/mgerenius/VScode_Workspace/Projet_01-Carte_dExploration/data/00_DATA_TEST/GPX--CSV-data.csv\"\n",
+    "output_folder = \"/Users/mgerenius/VScode_Workspace/Projet_01-Carte_dExploration/data/00_DATA_TEST\"\n",
+    "\n",
+    "\n",
+    "def function_4(file, output_folder):\n",
+    "    df = pd.read_csv(file)\n",
+    "    file_name = os.path.basename(file)\n",
+    "\n",
+    "    data_list = []\n",
+    "    count = 0\n",
+    "    for row in df.itertuples():\n",
+    "        count += 1\n",
+    "        date, y = row.time.split(' ',1)\n",
+    "        data_list.append(\n",
+    "            {\n",
+    "            \"nom\": file_name + str(count),\n",
+    "            \"date\": date,\n",
+    "            \"latitude\": row.latitude,\n",
+    "            \"longitude\": row.longitude\n",
+    "            }\n",
+    "        )\n",
+    "\n",
+    "\n",
+    "    new_df = pd.DataFrame(data_list)\n",
+    "    new_df.to_csv(file, index=False, encoding=\"utf-8\")\n",
+    "\n",
+    "    print(f\"le dataframe a bien été créé : {new_df}\")\n",
+    "    print(f\"Le fichier a été stocké ici : \\n{file}\")\n",
+    "\n",
+    "\n",
+    "\n",
+    "function_4(GPX_file, output_folder)"
    ]
   }
  ],
