--- a/notebooks/06_folium.ipynb
+++ b/notebooks/06_folium.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -35,7 +35,7 @@
        "            &lt;meta name=&quot;viewport&quot; content=&quot;width=device-width,\n",
        "                initial-scale=1.0, maximum-scale=1.0, user-scalable=no&quot; /&gt;\n",
        "            &lt;style&gt;\n",
-       "                #map_90e2763c68e748aa11da18607d20b892 {\n",
+       "                #map_2929b6a9eeb04601115abb143d59f166 {\n",
        "                    position: relative;\n",
        "                    width: 100.0%;\n",
        "                    height: 100.0%;\n",
@@ -49,14 +49,14 @@
        "&lt;body&gt;\n",
        "    \n",
        "    \n",
-       "            &lt;div class=&quot;folium-map&quot; id=&quot;map_90e2763c68e748aa11da18607d20b892&quot; &gt;&lt;/div&gt;\n",
+       "            &lt;div class=&quot;folium-map&quot; id=&quot;map_2929b6a9eeb04601115abb143d59f166&quot; &gt;&lt;/div&gt;\n",
        "        \n",
        "&lt;/body&gt;\n",
        "&lt;script&gt;\n",
        "    \n",
        "    \n",
-       "            var map_90e2763c68e748aa11da18607d20b892 = L.map(\n",
-       "                &quot;map_90e2763c68e748aa11da18607d20b892&quot;,\n",
+       "            var map_2929b6a9eeb04601115abb143d59f166 = L.map(\n",
+       "                &quot;map_2929b6a9eeb04601115abb143d59f166&quot;,\n",
        "                {\n",
        "                    center: [48.83407, 2.2],\n",
        "                    crs: L.CRS.EPSG3857,\n",
@@ -73,7 +73,7 @@
        "\n",
        "        \n",
        "    \n",
-       "            var tile_layer_6fbe18640329b1a70cf335ee0ac4c624 = L.tileLayer(\n",
+       "            var tile_layer_994b10fda1b6b0095e99511d32c93ab9 = L.tileLayer(\n",
        "                &quot;https://tile.openstreetmap.org/{z}/{x}/{y}.png&quot;,\n",
        "                {\n",
        "  &quot;minZoom&quot;: 0,\n",
@@ -90,16 +90,16 @@
        "            );\n",
        "        \n",
        "    \n",
-       "            tile_layer_6fbe18640329b1a70cf335ee0ac4c624.addTo(map_90e2763c68e748aa11da18607d20b892);\n",
+       "            tile_layer_994b10fda1b6b0095e99511d32c93ab9.addTo(map_2929b6a9eeb04601115abb143d59f166);\n",
        "        \n",
        "&lt;/script&gt;\n",
        "&lt;/html&gt;\" style=\"position:absolute;width:100%;height:100%;left:0;top:0;border:none !important;\" allowfullscreen webkitallowfullscreen mozallowfullscreen></iframe></div></div>"
       ],
       "text/plain": [
-       "<folium.folium.Map at 0x1074c2c10>"
+       "<folium.folium.Map at 0x106c6eba0>"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -147,7 +147,7 @@
        "            &lt;meta name=&quot;viewport&quot; content=&quot;width=device-width,\n",
        "                initial-scale=1.0, maximum-scale=1.0, user-scalable=no&quot; /&gt;\n",
        "            &lt;style&gt;\n",
-       "                #map_63db5e2cf76c4b8aff196d2f7c860cd2 {\n",
+       "                #map_243c6d2e939395d220d6e22ac8850244 {\n",
        "                    position: relative;\n",
        "                    width: 100.0%;\n",
        "                    height: 100.0%;\n",
@@ -161,16 +161,16 @@
        "&lt;body&gt;\n",
        "    \n",
        "    \n",
-       "            &lt;div class=&quot;folium-map&quot; id=&quot;map_63db5e2cf76c4b8aff196d2f7c860cd2&quot; &gt;&lt;/div&gt;\n",
+       "            &lt;div class=&quot;folium-map&quot; id=&quot;map_243c6d2e939395d220d6e22ac8850244&quot; &gt;&lt;/div&gt;\n",
        "        \n",
        "&lt;/body&gt;\n",
        "&lt;script&gt;\n",
        "    \n",
        "    \n",
-       "            var map_63db5e2cf76c4b8aff196d2f7c860cd2 = L.map(\n",
-       "                &quot;map_63db5e2cf76c4b8aff196d2f7c860cd2&quot;,\n",
+       "            var map_243c6d2e939395d220d6e22ac8850244 = L.map(\n",
+       "                &quot;map_243c6d2e939395d220d6e22ac8850244&quot;,\n",
        "                {\n",
-       "                    center: [48.83407, 2.2],\n",
+       "                    center: [45.556241, -73.62448],\n",
        "                    crs: L.CRS.EPSG3857,\n",
        "                    ...{\n",
        "  &quot;zoom&quot;: 12,\n",
@@ -185,7 +185,7 @@
        "\n",
        "        \n",
        "    \n",
-       "            var tile_layer_7b829769097b57b21a50bec563cedd62 = L.tileLayer(\n",
+       "            var tile_layer_89ff3f153e0c4aac11807a2b0db07884 = L.tileLayer(\n",
        "                &quot;https://tile.openstreetmap.org/{z}/{x}/{y}.png&quot;,\n",
        "                {\n",
        "  &quot;minZoom&quot;: 0,\n",
@@ -202,17 +202,17 @@
        "            );\n",
        "        \n",
        "    \n",
-       "            tile_layer_7b829769097b57b21a50bec563cedd62.addTo(map_63db5e2cf76c4b8aff196d2f7c860cd2);\n",
+       "            tile_layer_89ff3f153e0c4aac11807a2b0db07884.addTo(map_243c6d2e939395d220d6e22ac8850244);\n",
        "        \n",
        "    \n",
-       "            var marker_9a8bfc1c390540dfe76e8015fe020729 = L.marker(\n",
-       "                [48.83407, 2.2],\n",
+       "            var marker_2e639490925d46205c31cf6b27089481 = L.marker(\n",
+       "                [45.556241, -73.62448],\n",
        "                {\n",
        "}\n",
-       "            ).addTo(map_63db5e2cf76c4b8aff196d2f7c860cd2);\n",
+       "            ).addTo(map_243c6d2e939395d220d6e22ac8850244);\n",
        "        \n",
        "    \n",
-       "            var icon_84daaaa178789088298c8647634e492e = L.AwesomeMarkers.icon(\n",
+       "            var icon_e6235321e486f07c3335b82c9839077f = L.AwesomeMarkers.icon(\n",
        "                {\n",
        "  &quot;markerColor&quot;: &quot;blue&quot;,\n",
        "  &quot;iconColor&quot;: &quot;white&quot;,\n",
@@ -223,24 +223,24 @@
        "            );\n",
        "        \n",
        "    \n",
-       "        var popup_6c5ffa6406e98844766d04a82646437c = L.popup({\n",
+       "        var popup_01669ad492b93de57536d63fe7a6958a = L.popup({\n",
        "  &quot;maxWidth&quot;: &quot;100%&quot;,\n",
        "});\n",
        "\n",
        "        \n",
        "            \n",
-       "                var html_ec1ac8e975d972aada9b98203a8376e0 = $(`&lt;div id=&quot;html_ec1ac8e975d972aada9b98203a8376e0&quot; style=&quot;width: 100.0%; height: 100.0%;&quot;&gt;Mt. Hood Meadows&lt;/div&gt;`)[0];\n",
-       "                popup_6c5ffa6406e98844766d04a82646437c.setContent(html_ec1ac8e975d972aada9b98203a8376e0);\n",
+       "                var html_90fcadbb5dd4956880b557ecf94fef66 = $(`&lt;div id=&quot;html_90fcadbb5dd4956880b557ecf94fef66&quot; style=&quot;width: 100.0%; height: 100.0%;&quot;&gt;Mt. Hood Meadows&lt;/div&gt;`)[0];\n",
+       "                popup_01669ad492b93de57536d63fe7a6958a.setContent(html_90fcadbb5dd4956880b557ecf94fef66);\n",
        "            \n",
        "        \n",
        "\n",
-       "        marker_9a8bfc1c390540dfe76e8015fe020729.bindPopup(popup_6c5ffa6406e98844766d04a82646437c)\n",
+       "        marker_2e639490925d46205c31cf6b27089481.bindPopup(popup_01669ad492b93de57536d63fe7a6958a)\n",
        "        ;\n",
        "\n",
        "        \n",
        "    \n",
        "    \n",
-       "            marker_9a8bfc1c390540dfe76e8015fe020729.bindTooltip(\n",
+       "            marker_2e639490925d46205c31cf6b27089481.bindTooltip(\n",
        "                `&lt;div&gt;\n",
        "                     Click me!\n",
        "                 &lt;/div&gt;`,\n",
@@ -250,13 +250,13 @@
        "            );\n",
        "        \n",
        "    \n",
-       "                marker_9a8bfc1c390540dfe76e8015fe020729.setIcon(icon_84daaaa178789088298c8647634e492e);\n",
+       "                marker_2e639490925d46205c31cf6b27089481.setIcon(icon_e6235321e486f07c3335b82c9839077f);\n",
        "            \n",
        "&lt;/script&gt;\n",
        "&lt;/html&gt;\" style=\"position:absolute;width:100%;height:100%;left:0;top:0;border:none !important;\" allowfullscreen webkitallowfullscreen mozallowfullscreen></iframe></div></div>"
       ],
       "text/plain": [
-       "<folium.folium.Map at 0x107584e90>"
+       "<folium.folium.Map at 0x11e10c910>"
       ]
      },
      "execution_count": 4,
@@ -265,10 +265,10 @@
     }
    ],
    "source": [
-    "m = folium.Map([48.83407, 2.2], zoom_start=12)\n",
+    "m = folium.Map([45.556241, -73.62448], zoom_start=12)\n",
     "\n",
     "folium.Marker(\n",
-    "    location=[48.83407, 2.2],\n",
+    "    location=[45.556241, -73.62448],\n",
     "    tooltip=\"Click me!\",\n",
     "    popup=\"Mt. Hood Meadows\",\n",
     "    icon=folium.Icon(icon=\"cloud\"),\n",
@@ -281,9 +281,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python (venv)",
+   "display_name": ".venv",
    "language": "python",
-   "name": "venv"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
