--- a/notebooks/02_gpx_data_to_csv.ipynb
+++ b/notebooks/02_gpx_data_to_csv.ipynb
@@ -16,9 +16,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/Users/mgerenius/VScode_Workspace/Projet_01-Carte_dExploration/data/00_DATA_TEST/9089229915.csv\n"
+     ]
+    }
+   ],
    "source": [
     "import os\n",
     "from gpx_converter import Converter\n",
@@ -36,18 +44,33 @@
     "        \n",
     "        # Conversion du fichier GPX en CSV\n",
     "        Converter(input_file=file).gpx_to_csv(output_file=output_file)\n",
+    "        print(output_file)\n",
     "\n",
     "\n",
-    "file = \"\"\n",
-    "output_folder = \"\"\n",
+    "file = \"/Users/mgerenius/VScode_Workspace/Projet_01-Carte_dExploration/data/Strava_RAW_files/activities/9089229915.gpx\"\n",
+    "output_folder = \"/Users/mgerenius/VScode_Workspace/Projet_01-Carte_dExploration/data/00_DATA_TEST\"\n",
     "\n",
     "gpx_to_csv(file, output_folder)"
    ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": ".venv",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.13.2"
   }
  },
  "nbformat": 4,
