--- a/notebooks/03_fit_data_to_csv.ipynb
+++ b/notebooks/03_fit_data_to_csv.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,11 +14,7 @@
     "import pandas as pd\n",
     "import os\n",
     "import gzip\n",
-    "import shutil\n",
-    "\n",
-    "\n",
-    "input_folder = \"/Users/mgerenius/Downloads/Strava_data_export_20-03-2025/activities\"\n",
-    "output_folder = \"\""
+    "import shutil"
    ]
   },
   {
@@ -26,52 +22,6 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "203\n",
-      "3\n"
-     ]
-    }
-   ],
-   "source": [
-    "\"\"\"\n",
-    "Comptage du nombre de fichiers particuliers dans un dossier ciblé\n",
-    "\"\"\"\n",
-    "\n",
-    "count = 0\n",
-    "count_2 = 0\n",
-    "\n",
-    "for file in os.listdir(input_folder):\n",
-    "    count += 1\n",
-    "    if file.endswith(\".fit\"):\n",
-    "        count_2 += 1\n",
-    "\n",
-    "print(count)\n",
-    "print(count_2)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "le fichier 10895317197.fit.gz a bien été décompréssé et stocké dans le dossier GPX_files\n"
-     ]
-    }
-   ],
    "source": [
     "\n",
     "\"\"\"\n",
@@ -111,28 +61,6 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Fichier 10657680236.csv généré avec succès !\n"
-     ]
-    }
-   ],
    "source": [
     "\"\"\"\n",
     "Fonction pour convertir 1 fichier .fit en fichier CSV\n",
@@ -156,10 +84,10 @@
     "    print(f\"Fichier {csv_file_name} généré avec succès !\")\n",
     "\n",
     "\n",
-    "file = \"/Users/mgerenius/Downloads/Strava_data_export_20-03-2025/activities/10657680236.fit\"\n",
-    "output_folder = \"/Users/mgerenius/VScode Workspace/PROJET 01 - Carte d'exploration/data/CSV_files\"\n",
+    "FIT_FILE = \"/Users/mgerenius/VScode_Workspace/Projet_01-Carte_dExploration/data/Strava_RAW_files/activities/11408573058.fit\"\n",
+    "OUTPUT_FOLDER = \"/Users/mgerenius/Desktop/TEST_FOLDER\"\n",
     "\n",
-    "fit_to_csv(file, output_folder)\n",
+    "fit_to_csv(FIT_FILE, OUTPUT_FOLDER)\n",
     "\n",
     "\n"
    ]
@@ -181,7 +109,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.2"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
